# whatsapp-sender

./: Cargo.toml  README.md
src/: excel_handler.rs  main.rs
whatsapp-sender/: relatorio_final.md
whatsapp-sender/src/: message_handler.rs  whatsapp_automation.rs
