[package]
name = "whatsapp_sender_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GUI - usando eframe (egui) por ser mais leve e fácil de compilar que Tauri
eframe = "0.26.0"
egui = "0.26.0"

# Automação web - alternativa ao Selenium
thirtyfour = "0.31.0"
tokio = { version = "1.36.0", features = ["full"] }

# Manipulação de Excel - alternativas ao Pandas
calamine = "0.24.0"
rust_xlsxwriter = "0.62.0"

# Utilitários
chrono = "0.4.35"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.80"
regex = "1.10.3"
url = "2.5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
